Clean up contact page.

--- a/contact.html
+++ b/contact.html
@@ -57,69 +57,47 @@
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Contact information</h2>
+          <h2>Contact Info</h2>
           <p>
-            For membership, accounts and club specific inquiries. You can contact the administration office or go to the specific location around you.
+            For membership, accounts and club inquiries, you can contact the office or go to the specific location around you.
           </p>
-          <h3>Adiministration</h3>
           <ul class="listings">
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-name">Head Office</span>
-                <span class="listings__item-tel">Tel:</span>
+                <span class="listings__item-name"><strong>Head Office</strong></span>
+                <span class="listings__item-tel">Tel: 123-456-7890</span>
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-name"> Billing </span>
-                <span class="listings__item-tel">Tel:</span>
+                <span class="listings__item-name"><strong>Billing</strong></span>
+                <span class="listings__item-tel">Tel: 123-456-7890</span>
               </p>
             </li>
             <li class="listings__item">
               <p class="listings__item-content">
-                <span class="listings__item-name">Member Services</span>
-                <span class="listings__item-tel">Tel:</span>
+                <span class="listings__item-name"><strong>Member Services</strong></span>
+                <span class="listings__item-tel">Tel: 123-456-7890</span>
               </p>
             </li>
           </ul>
-          <h3>Location</h3>
-          <ul class="listings">
-            <li class="listings__item">
-              <p class="listings__item-content">
-                <span class="listings__item-name">Metro Fitness Center</span>
-                <span class="listings__item-adress">Address:</span>
-                <span class="listings__item-tel">Tel:</span>
-              </p>
-            </li>
-            <li class="listings__item">
-              <p class="listings__item-content">
-                <span class="listings__item-name">Lansdown Fitness Center</span>
-                <span class="listings__item-adress">Address:</span>
-                <span class="listings__item-tel">Tel:</span>
-              </p>
-            </li>
-            <li class="listings__item">
-              <p class="listings__item-content">
-                <span class="listings__item-name">Lansdown Fitness Center</span>
-                <span class="listings__item-adress">Address:</span>
-                <span class="listings__item-tel">Tel:</span>
-              </p>
-            </li>
-          </ul>
-
+          <h2>Location</h2>
+          <p>
+            Google Map here...
+          </p>
         </div>
       </section>
       <section class="section section--alt">
         <div class="wrap">
           <h2>Contact Us</h2>
-          <p>
-            A form here
-          </p>
-          <p>
-            <a href="events.html" class="btn">
-              Submit
-            </a>
-          </p>
+          <form>
+            <p>
+              Form here...
+            </p>
+            <p>
+              <input type="submit" class="btn btn--primary">
+            </p>
+          </form>
         </div>
       </section>
     </div>
