Tweak copy and styles.

--- a/events.html
+++ b/events.html
@@ -29,7 +29,7 @@
                     <a href="#" class="nav-btn">Menu</a>
                   </li><!--
                   --><li class="nav__item">
-                    <a href="events.html" class="nav-btn">Events</a>
+                    <a href="events.html" class="nav-btn -active">Events</a>
                   </li><!--
                   --><li class="nav__item">
                     <a href="about.html" class="nav-btn">About</a>
