--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         <div class="wrap">
           <h2>Membership</h2>
           <p>
-            Membership details here...
+            We offer three options for monthly subscriptions. By registering online, you'll immediately get benefits like access to the gym during open hours and a free personal training session every 3rd month.
           </p>
           <p>
-            <a href="join.html" class="btn">
+            <a href="join.html#membership" class="btn">
               Learn More
             </a>
           </p>
@@ -75,7 +75,36 @@
         <div class="wrap">
           <h2>Training</h2>
           <p>
-            Training packages here...
+            Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
+          </p>
+          <ul class="listings">
+            <li class="listings__item listings__item--alt">
+              <p class="listings__item-content listings__item-content--alt">
+                <span class="listings__item-price">$90/ea</span>
+                <span class="listings__item-name">for 3 sessions</span>
+              </p>
+            </li>
+            <li class="listings__item listings__item--alt">
+              <p class="listings__item-content listings__item-content--alt">
+                <span class="listings__item-price">$85/ea</span>
+                <span class="listings__item-name">for 9 sessions</span>
+              </p>
+            </li>
+            <li class="listings__item listings__item--alt">
+              <p class="listings__item-content listings__item-content--alt">
+                <span class="listings__item-price">$75/ea</span>
+                <span class="listings__item-name">for 48 sessions</span>
+              </p>
+            </li>
+            <li class="listings__item listings__item--alt">
+              <p class="listings__item-content listings__item-content--alt">
+                <span class="listings__item-price">$70/ea</span>
+                <span class="listings__item-name">for 96 sessions</span>
+              </p>
+            </li>
+          </ul>
+          <p>
+            Sign up for membership first and you'll be able to add sessions from your dashboard online.
           </p>
           <p>
             <a href="join.html" class="btn">
