--- a/join.html
+++ b/join.html
@@ -21,7 +21,7 @@
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="join.html" class="nav-btn">Join Us</a>
+                <a href="join.html" class="nav-btn -active">Join Us</a>
               </li>
               <li>
                 <ul class="nav__menu">
@@ -57,17 +57,9 @@
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Overview</h2>
+          <h2 id="membership">Membership</h2>
           <p>
-            Intro text here...
-          </p>
-        </div>
-      </section>
-      <section class="section section--alt">
-        <div class="wrap">
-          <h2>Membership</h2>
-          <p>
-            Includes access to the gym during open hours and a free personal training session every 3rd month.
+            All options include access to the gym during open hours and a free personal training session every 3rd month.
           </p>
           <ul class="listings">
             <li class="listings__item">
@@ -91,7 +83,7 @@
           </ul>
         </div>
       </section>
-      <section class="section">
+      <section class="section section--alt">
         <div class="wrap">
           <h2>Sign Up</h2>
           <form>
