--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                     <a href="events.html" class="nav-btn">Events</a>
                   </li><!--
                   --><li class="nav__item">
-                    <a href="about.html" class="nav-btn">About</a>
+                    <a href="about.html" class="nav-btn -active">About</a>
                   </li><!--
                   --><li class="nav__item">
                     <a href="contact.html" class="nav-btn">Contact</a>
