--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                     <a href="about.html" class="nav-btn">About</a>
                   </li><!--
                   --><li class="nav__item">
-                    <a href="contact.html" class="nav-btn">Contact</a>
+                    <a href="contact.html" class="nav-btn -active">Contact</a>
                   </li>
                 </ul>
               </li>
