--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="hero__wrap wrap">
           <div class="hero__content">
             <h2 class="hero__tagline">
+              Strength and conditioning.<br>
               Become mighty!
             </h2>
             <a href="join.html" class="hero__btn-cta btn btn--primary">
