Remove grid behaviour from listings styles.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -543,22 +543,22 @@
             <p>
               Includes access to the gym during open hours and a free personal training session every 3rd month.
             </p>
-            <ul class="listings">
-              <li class="listings__item">
+            <ul class="listings row">
+              <li class="listings__item col col--3md">
                 <p class="listings__item-content">
                   <span class="listings__item-price">$64/mo</span>
                   <span class="listings__item-name">Month-by-month</span>
                   <a href="#" class="btn">Select</a>
                 </p>
               </li>
-              <li class="listings__item">
+              <li class="listings__item col col--3md">
                 <p class="listings__item-content">
                   <span class="listings__item-price">$56/mo</span>
                   <span class="listings__item-name">6 months</span>
                   <a href="#" class="btn">Select</a>
                 </p>
               </li>
-              <li class="listings__item">
+              <li class="listings__item col col--3md">
                 <p class="listings__item-content">
                   <span class="listings__item-price">$48/mo</span>
                   <span class="listings__item-name">12 months</span>
@@ -575,22 +575,22 @@
 &lt;p&gt;
   Includes access to the gym during open hours and a free personal training session every 3rd month.
 &lt;/p&gt;
-&lt;ul class=&quot;listings&quot;&gt;
-  &lt;li class=&quot;listings__item&quot;&gt;
+&lt;ul class=&quot;listings row&quot;&gt;
+  &lt;li class=&quot;listings__item col col--3md&quot;&gt;
     &lt;p class=&quot;listings__item-content&quot;&gt;
       &lt;span class=&quot;listings__item-price&quot;&gt;$64/mo&lt;/span&gt;
       &lt;span class=&quot;listings__item-name&quot;&gt;Month-by-month&lt;/span&gt;
       &lt;a href=&quot;#&quot; class=&quot;btn&quot;&gt;Select&lt;/a&gt;
     &lt;/p&gt;
   &lt;/li&gt;
-  &lt;li class=&quot;listings__item&quot;&gt;
+  &lt;li class=&quot;listings__item col col--3md&quot;&gt;
     &lt;p class=&quot;listings__item-content&quot;&gt;
       &lt;span class=&quot;listings__item-price&quot;&gt;$56/mo&lt;/span&gt;
       &lt;span class=&quot;listings__item-name&quot;&gt;6 months&lt;/span&gt;
       &lt;a href=&quot;#&quot; class=&quot;btn&quot;&gt;Select&lt;/a&gt;
     &lt;/p&gt;
   &lt;/li&gt;
-  &lt;li class=&quot;listings__item&quot;&gt;
+  &lt;li class=&quot;listings__item col col--3md&quot;&gt;
     &lt;p class=&quot;listings__item-content&quot;&gt;
       &lt;span class=&quot;listings__item-price&quot;&gt;$48/mo&lt;/span&gt;
       &lt;span class=&quot;listings__item-name&quot;&gt;12 months&lt;/span&gt;
