--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -606,10 +606,10 @@
             <a href="#grid" class="anchor"></a>
           </h2>
           <p>
-            This site uses a flexible grid system. Simply a add <code>div.row</code> that contains <code>div.col</code> with <code>.col--{number}</code> to establish a row of column(s). For example, a <code>div.col.col--3</code> creates a column that fills 1/3 of the row. There are up to <strong>12</strong> column sizes to choose from.
+            This site uses a flexible 12-column grid system. Simply a add <code>div.row</code> that contains <code>div.col</code> with <code>.col--{number}</code> to establish size of the column. For example, a <code>div.col.col--3</code> creates a column that fills 1/4 of the row. There are up to <strong>12</strong> column sizes to choose from.
           </p>
           <p>
-            <strong>Adaptive grid:</strong> Grid can also be applied based on breakpoint by using <code>.col--{number}{breakpoint}</code>. For example, <code>.col--2md</code> will ensure a 2-column layout at <code>md</code> breakpoint. The following breakpoints are available:
+            <strong>Adaptive grid:</strong> Grid can also be applied based on breakpoint by using <code>.col--{number}{breakpoint}</code>. For example, <code>.col--4md</code> will ensure a 1/3 column width at <code>md</code> breakpoint. The following breakpoints are available:
           </p>
           <ul>
             <li>
@@ -621,211 +621,61 @@
           </ul>
           <div class="sg-component-preview">
             <div class="row">
+              <div class="col col--12"><div class="sg-block"></div></div>
+            </div>
+            <div class="row">
+              <div class="col col--11"><div class="sg-block"></div></div>
               <div class="col col--1"><div class="sg-block"></div></div>
             </div>
             <div class="row">
+              <div class="col col--10"><div class="sg-block"></div></div>
               <div class="col col--2"><div class="sg-block"></div></div>
-              <div class="col col--2"><div class="sg-block"></div></div>
             </div>
             <div class="row">
-              <div class="col col--3"><div class="sg-block"></div></div>
-              <div class="col col--3"><div class="sg-block"></div></div>
+              <div class="col col--9"><div class="sg-block"></div></div>
               <div class="col col--3"><div class="sg-block"></div></div>
             </div>
             <div class="row">
-              <div class="col col--4"><div class="sg-block"></div></div>
-              <div class="col col--4"><div class="sg-block"></div></div>
-              <div class="col col--4"><div class="sg-block"></div></div>
+              <div class="col col--8"><div class="sg-block"></div></div>
               <div class="col col--4"><div class="sg-block"></div></div>
             </div>
             <div class="row">
-              <div class="col col--5"><div class="sg-block"></div></div>
-              <div class="col col--5"><div class="sg-block"></div></div>
-              <div class="col col--5"><div class="sg-block"></div></div>
-              <div class="col col--5"><div class="sg-block"></div></div>
+              <div class="col col--7"><div class="sg-block"></div></div>
               <div class="col col--5"><div class="sg-block"></div></div>
             </div>
             <div class="row">
               <div class="col col--6"><div class="sg-block"></div></div>
               <div class="col col--6"><div class="sg-block"></div></div>
-              <div class="col col--6"><div class="sg-block"></div></div>
-              <div class="col col--6"><div class="sg-block"></div></div>
-              <div class="col col--6"><div class="sg-block"></div></div>
-              <div class="col col--6"><div class="sg-block"></div></div>
-            </div>
-            <div class="row">
-              <div class="col col--7"><div class="sg-block"></div></div>
-              <div class="col col--7"><div class="sg-block"></div></div>
-              <div class="col col--7"><div class="sg-block"></div></div>
-              <div class="col col--7"><div class="sg-block"></div></div>
-              <div class="col col--7"><div class="sg-block"></div></div>
-              <div class="col col--7"><div class="sg-block"></div></div>
-              <div class="col col--7"><div class="sg-block"></div></div>
-            </div>
-            <div class="row">
-              <div class="col col--8"><div class="sg-block"></div></div>
-              <div class="col col--8"><div class="sg-block"></div></div>
-              <div class="col col--8"><div class="sg-block"></div></div>
-              <div class="col col--8"><div class="sg-block"></div></div>
-              <div class="col col--8"><div class="sg-block"></div></div>
-              <div class="col col--8"><div class="sg-block"></div></div>
-              <div class="col col--8"><div class="sg-block"></div></div>
-              <div class="col col--8"><div class="sg-block"></div></div>
-            </div>
-            <div class="row">
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-              <div class="col col--9"><div class="sg-block"></div></div>
-            </div>
-            <div class="row">
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-              <div class="col col--10"><div class="sg-block"></div></div>
-            </div>
-            <div class="row">
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-              <div class="col col--11"><div class="sg-block"></div></div>
-            </div>
-            <div class="row">
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
-              <div class="col col--12"><div class="sg-block"></div></div>
             </div>
           </div>
           <div class="sg-component-code">
               <p class="sg-component-label">Code</p>
               <pre><code>&lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--1&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--12&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--2&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--2&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--11&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--1&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--3&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--3&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--3&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--10&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--2&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--4&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--4&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--4&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--4&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--9&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--3&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--5&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--5&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--5&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--5&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--5&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--8&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--4&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--6&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--6&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--6&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--6&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--6&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--6&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--7&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--5&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;
 &lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--7&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--7&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--7&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--7&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--7&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--7&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--7&quot;&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--8&quot;&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--9&quot;&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--10&quot;&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--11&quot;&gt;&lt;/div&gt;
-&lt;/div&gt;
-&lt;div class=&quot;row&quot;&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
-  &lt;div class=&quot;col col--12&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--6&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
+  &lt;div class=&quot;col col--6&quot;&gt;&lt;div class=&quot;sg-block&quot;&gt;&lt;/div&gt;&lt;/div&gt;
 &lt;/div&gt;</code></pre>
           </div>
         </section>
