Add map and form in contact.

--- a/contact.html
+++ b/contact.html
@@ -57,47 +57,55 @@
       </section>
       <section class="section">
         <div class="wrap">
-          <h2>Contact Info</h2>
+          <h2>Information</h2>
           <p>
-            For membership, accounts and club inquiries, you can contact the office or go to the specific location around you.
+            For membership, training and club inquiries, you can contact us through email, phone or by using contact form below.
           </p>
-          <ul class="listings">
-            <li class="listings__item">
+          <ul class="listings row">
+            <li class="listings__item col col--6md">
               <p class="listings__item-content">
-                <span class="listings__item-name"><strong>Head Office</strong></span>
-                <span class="listings__item-tel">Tel: 123-456-7890</span>
+                <span class="listings__item-title">Membership & Billing</span>
+                <span class="listings__item-prop"><a href="mailto:members@mightylifefitness.ca">members@mightylifefitness.ca</a></span>
+                <span class="listings__item-prop">604-654-9870</span>
               </p>
             </li>
-            <li class="listings__item">
+            <li class="listings__item col col--6md">
               <p class="listings__item-content">
-                <span class="listings__item-name"><strong>Billing</strong></span>
-                <span class="listings__item-tel">Tel: 123-456-7890</span>
-              </p>
-            </li>
-            <li class="listings__item">
-              <p class="listings__item-content">
-                <span class="listings__item-name"><strong>Member Services</strong></span>
-                <span class="listings__item-tel">Tel: 123-456-7890</span>
+                <span class="listings__item-title">General</span>
+                <span class="listings__item-prop"><a href="mailto:info@mightylifefitness.ca">info@mightylifefitness.ca</a></span>
+                <span class="listings__item-prop">604-456-7890</span>
               </p>
             </li>
           </ul>
           <h2>Location</h2>
           <p>
-            Google Map here...
+            We're conveniently located near Main Street Skytrain at <strong>181 Athletes Way</strong>. Underground parking is available.
           </p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.2378320911034!2d-123.11118448448019!3d49.27189047933016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486716268e50fe1%3A0x97d797f3d956816a!2s181+Athletes+Way%2C+Vancouver%2C+BC!5e0!3m2!1sen!2sca!4v1518392796300" width="288" height="320" frameborder="0" style="border:0" allowfullscreen class="map"></iframe>
         </div>
       </section>
       <section class="section section--alt">
         <div class="wrap">
           <h2>Contact Us</h2>
-          <form>
-            <p>
-              Form here...
-            </p>
-            <p>
-              <input type="submit" class="btn btn--primary">
-            </p>
-          </form>
+          <div class="row">
+            <form method="post" class="col col--8md">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input id="name" type="text" name="name" placeholder="Your name...">
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input id="email" type="text" name="email" placeholder="Your email...">
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" rows="6" placeholder="Ask us a question..."></textarea>
+              </div>
+              <div class="form-group">
+                <input type="submit" class="btn btn--primary">
+              </div>
+            </form>
+          </div>
         </div>
       </section>
     </div>
