--- a/join.html
+++ b/join.html
@@ -61,23 +61,23 @@
           <p>
             All options include access to the gym during open hours and a free personal training session every 3rd month.
           </p>
-          <ul class="listings">
-            <li class="listings__item">
+          <ul class="listings row">
+            <li class="listings__item col col--4md">
               <p class="listings__item-content">
-                <span class="listings__item-price">$64/mo</span>
-                <span class="listings__item-name">Month-by-month</span>
+                <span class="listings__item-title">$64/mo</span>
+                <span class="listings__item-prop">Month-by-month</span>
               </p>
             </li>
-            <li class="listings__item">
+            <li class="listings__item col col--4md">
               <p class="listings__item-content">
-                <span class="listings__item-price">$56/mo</span>
-                <span class="listings__item-name">6 months</span>
+                <span class="listings__item-title">$56/mo</span>
+                <span class="listings__item-prop">6 months</span>
               </p>
             </li>
-            <li class="listings__item">
+            <li class="listings__item col col--4md">
               <p class="listings__item-content">
-                <span class="listings__item-price">$48/mo</span>
-                <span class="listings__item-name">12 months</span>
+                <span class="listings__item-title">$48/mo</span>
+                <span class="listings__item-prop">12 months</span>
               </p>
             </li>
           </ul>
