Fix training section layout in landing.

--- a/index.html
+++ b/index.html
@@ -77,29 +77,29 @@
           <p>
             Our personal training packages lets you reach your goal faster by pairing up with one of our super-qualified coaches. Here are our affordable pricing tiers:
           </p>
-          <ul class="listings">
-            <li class="listings__item listings__item--alt">
+          <ul class="listings row">
+            <li class="listings__item listings__item--alt col col--6md">
               <p class="listings__item-content listings__item-content--alt">
-                <span class="listings__item-price">$90/ea</span>
-                <span class="listings__item-name">for 3 sessions</span>
+                <span class="listings__item-title">$90/ea</span>
+                <span class="listings__item-prop">for 3 sessions</span>
               </p>
             </li>
-            <li class="listings__item listings__item--alt">
+            <li class="listings__item listings__item--alt col col--6md">
               <p class="listings__item-content listings__item-content--alt">
-                <span class="listings__item-price">$85/ea</span>
-                <span class="listings__item-name">for 9 sessions</span>
+                <span class="listings__item-title">$85/ea</span>
+                <span class="listings__item-prop">for 9 sessions</span>
               </p>
             </li>
-            <li class="listings__item listings__item--alt">
+            <li class="listings__item listings__item--alt col col--6md">
               <p class="listings__item-content listings__item-content--alt">
-                <span class="listings__item-price">$75/ea</span>
-                <span class="listings__item-name">for 48 sessions</span>
+                <span class="listings__item-title">$75/ea</span>
+                <span class="listings__item-prop">for 48 sessions</span>
               </p>
             </li>
-            <li class="listings__item listings__item--alt">
+            <li class="listings__item listings__item--alt col col--6md">
               <p class="listings__item-content listings__item-content--alt">
-                <span class="listings__item-price">$70/ea</span>
-                <span class="listings__item-name">for 96 sessions</span>
+                <span class="listings__item-title">$70/ea</span>
+                <span class="listings__item-prop">for 96 sessions</span>
               </p>
             </li>
           </ul>
