--- a/events.html
+++ b/events.html
@@ -63,13 +63,12 @@
           </p>
         </div>
       </section>
-      <section class="section">
+      <section class="section section--alt">
         <div class="wrap">
           <h2>Past Events</h2>
           <p>
             Content
           </p>
-
         </div>
       </section>
     </div>
