Add login to nav.

--- a/events.html
+++ b/events.html
@@ -27,13 +27,16 @@
                     <a href="#" class="nav-btn">Menu</a>
                   </li><!--
                   --><li class="nav__item">
-                    <a href="events.html" class="nav-btn -active">Events</a>
-                  </li><!--
-                  --><li class="nav__item">
                     <a href="about.html" class="nav-btn">About</a>
                   </li><!--
                   --><li class="nav__item">
+                    <a href="events.html" class="nav-btn -active">Events</a>
+                  </li><!--
+                  --><li class="nav__item">
                     <a href="contact.html" class="nav-btn">Contact</a>
+                  </li><!--
+                  --><li class="nav__item">
+                    <a href="login.html" class="nav-btn">Login</a>
                   </li>
                 </ul>
               </li>
