Tweak hero structure to include h1.

--- a/about.html
+++ b/about.html
@@ -44,18 +44,18 @@
           </nav>
         </div>
       </header>
-      <section class="hero hero--about">
+      <div class="hero hero--about">
         <div class="hero__wrap wrap">
           <div class="hero__content">
-            <h2 class="hero__title">
+            <h1 class="hero__title">
               About
-            </h2>
+            </h1>
           </div>
           <p class="hero__citation">
             Photo by <a href="https://unsplash.com/@ricardo2coach" target="_blank" class="a-light">Ricardo Estefânio</a>
           </p>
         </div>
-      </section>
+      </div>
       <section class="section">
         <div class="wrap">
           <h2>
