--- a/contact.html
+++ b/contact.html
@@ -44,18 +44,18 @@
           </nav>
         </div>
       </header>
-      <section class="hero hero--contact">
+      <div class="hero hero--contact">
         <div class="hero__wrap wrap">
           <div class="hero__content">
-            <h2 class="hero__title">
+            <h1 class="hero__title">
               Contact
-            </h2>
+            </h1>
           </div>
           <p class="hero__citation">
             Photo by <a href="https://unsplash.com/@justynwarner" target="_blank" class="a-light">Justyn Warner</a>
           </p>
         </div>
-      </section>
+      </div>
       <section class="section">
         <div class="wrap">
           <h2>Information</h2>
