--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
           </nav>
         </div>
       </header>
-      <section class="hero hero--landing">
+      <div class="hero hero--landing">
         <div class="hero__wrap wrap">
           <div class="hero__content">
+            <h1 class="hidden">Welcome to Mighty Life Fitness!</h1>
             <h2 class="hero__tagline">
               Become mighty!
             </h2>
@@ -58,12 +59,12 @@
             Photo by <a href="https://unsplash.com/@victorfreitas" target="_blank" class="a-light">Victor Freitas</a>
           </p>
         </div>
-      </section>
+      </div>
       <section class="section">
         <div class="wrap">
           <h2>Membership</h2>
           <p>
-            We offer three options for monthly subscriptions. By registering online, you'll immediately get benefits like access to the gym during open hours and a free personal training session every 3rd month.
+            We offer three options for monthly subscriptions. By registering online, you'll immediately get benefits like access to the gym during open hours and <strong>a free personal training session</strong> every 3rd month.
           </p>
           <p>
             <a href="join.html#membership" class="btn">
