--- a/join.html
+++ b/join.html
@@ -44,18 +44,18 @@
           </nav>
         </div>
       </header>
-      <section class="hero hero--join">
+      <div class="hero hero--join">
         <div class="hero__wrap wrap">
           <div class="hero__content">
-            <h2 class="hero__title">
+            <h1 class="hero__title">
               Join Us
-            </h2>
+            </h1>
           </div>
           <p class="hero__citation">
             Photo by <a href="https://unsplash.com/@victorfreitas" target="_blank" class="a-light">Victor Freitas</a>
           </p>
         </div>
-      </section>
+      </div>
       <section class="section">
         <div class="wrap">
           <h2 id="membership">Membership</h2>
