--- a/contact.html
+++ b/contact.html
@@ -82,31 +82,35 @@
           <p>
             We're conveniently located near Main Street Skytrain at <strong>181 Athletes Way</strong>. Underground parking is available.
           </p>
+          <p>
+            <strong>Open Hours</strong><br>
+            Weekdays: 6am - 11pm<br>
+            Saturdays: 6am - 10pm<br>
+            Sundays and holidays: 8am - 10pm<br>
+          </p>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.2378320911034!2d-123.11118448448019!3d49.27189047933016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486716268e50fe1%3A0x97d797f3d956816a!2s181+Athletes+Way%2C+Vancouver%2C+BC!5e0!3m2!1sen!2sca!4v1518392796300" width="288" height="320" frameborder="0" style="border:0" allowfullscreen class="map"></iframe>
         </div>
       </section>
       <section class="section section--alt">
-        <div class="wrap">
+        <div class="wrap wrap--md">
           <h2>Contact Us</h2>
-          <div class="row">
-            <form method="post" class="col col--8md">
-              <div class="form-group">
-                <label for="name">Name</label>
-                <input id="name" type="text" name="name" placeholder="Your name...">
-              </div>
-              <div class="form-group">
-                <label for="email">Email</label>
-                <input id="email" type="text" name="email" placeholder="Your email...">
-              </div>
-              <div class="form-group">
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="6" placeholder="Ask us a question..."></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" class="btn btn--primary">
-              </div>
-            </form>
-          </div>
+          <form action="register1.html" method="post">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input id="name" type="text" name="name" required placeholder="Your name...">
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input id="email" type="email" name="email" required placeholder="Your email...">
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="6" required placeholder="Ask us a question..."></textarea>
+            </div>
+            <div class="form-group">
+              <input type="submit" class="btn btn--primary">
+            </div>
+          </form>
         </div>
       </section>
     </div>
