Improve listings styles.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -544,25 +544,25 @@
               Includes access to the gym during open hours and a free personal training session every 3rd month.
             </p>
             <ul class="listings row">
-              <li class="listings__item col col--3md">
+              <li class="listings__item col col--4md">
                 <p class="listings__item-content">
                   <span class="listings__item-title">$64/mo</span>
                   <span class="listings__item-prop">Month-by-month</span>
-                  <a href="#" class="btn">Select</a>
+                  <a href="#" class="listings__item-cta btn btn--full">Select</a>
                 </p>
               </li>
-              <li class="listings__item col col--3md">
+              <li class="listings__item col col--4md">
                 <p class="listings__item-content">
                   <span class="listings__item-title">$56/mo</span>
                   <span class="listings__item-prop">6 months</span>
-                  <a href="#" class="btn">Select</a>
+                  <a href="#" class="listings__item-cta btn btn--full">Select</a>
                 </p>
               </li>
-              <li class="listings__item col col--3md">
+              <li class="listings__item col col--4md">
                 <p class="listings__item-content">
                   <span class="listings__item-title">$48/mo</span>
                   <span class="listings__item-prop">12 months</span>
-                  <a href="#" class="btn">Select</a>
+                  <a href="#" class="listings__item-cta btn btn--full">Select</a>
                 </p>
               </li>
             </ul>
@@ -580,21 +580,21 @@
     &lt;p class=&quot;listings__item-content&quot;&gt;
       &lt;span class=&quot;listings__item-title&quot;&gt;$64/mo&lt;/span&gt;
       &lt;span class=&quot;listings__item-prop&quot;&gt;Month-by-month&lt;/span&gt;
-      &lt;a href=&quot;#&quot; class=&quot;btn&quot;&gt;Select&lt;/a&gt;
+      &lt;a href=&quot;#&quot; class=&quot;listings__item-cta btn btn--full&quot;&gt;Select&lt;/a&gt;
     &lt;/p&gt;
   &lt;/li&gt;
   &lt;li class=&quot;listings__item col col--3md&quot;&gt;
     &lt;p class=&quot;listings__item-content&quot;&gt;
       &lt;span class=&quot;listings__item-title&quot;&gt;$56/mo&lt;/span&gt;
       &lt;span class=&quot;listings__item-prop&quot;&gt;6 months&lt;/span&gt;
-      &lt;a href=&quot;#&quot; class=&quot;btn&quot;&gt;Select&lt;/a&gt;
+      &lt;a href=&quot;#&quot; class=&quot;listings__item-cta btn btn--full&quot;&gt;Select&lt;/a&gt;
     &lt;/p&gt;
   &lt;/li&gt;
   &lt;li class=&quot;listings__item col col--3md&quot;&gt;
     &lt;p class=&quot;listings__item-content&quot;&gt;
       &lt;span class=&quot;listings__item-title&quot;&gt;$48/mo&lt;/span&gt;
       &lt;span class=&quot;listings__item-prop&quot;&gt;12 months&lt;/span&gt;
-      &lt;a href=&quot;#&quot; class=&quot;btn&quot;&gt;Select&lt;/a&gt;
+      &lt;a href=&quot;#&quot; class=&quot;listings__item-cta btn btn--full&quot;&gt;Select&lt;/a&gt;
     &lt;/p&gt;
   &lt;/li&gt;
 &lt;/ul&gt;</code></pre>
