--- a/login.html
+++ b/login.html
@@ -57,15 +57,16 @@
         </div>
       </div>
       <section class="section">
-        <h2 class="hidden" aria-hidden>Login</h2>
-        <form action="dashboard.html" method="post" class="wrap wrap--sm">
+        <h2 class="hidden">Login</h2>
+        <form action="dashboard.html" class="wrap wrap--sm">
+          <!-- TODO: Make fields required -->
           <div class="form-group">
             <label for="username">Username</label>
-            <input id="username" type="text" name="username" placeholder="Your username (email)...">
+            <input id="username" type="text" name="username" placeholder="Username (email)...">
           </div>
           <div class="form-group">
-            <label for="email">Password</label>
-            <input id="password" type="password" name="password" placeholder="Your password...">
+            <label for="password">Password</label>
+            <input id="password" type="password" name="password" placeholder="Password...">
           </div>
           <div class="form-group">
             <input type="submit" value="Login" class="btn btn--primary">
