update on team section, events, community section
add contetns on  team section (about), events, community section (landing page)

--- a/index.html
+++ b/index.html
@@ -119,10 +119,16 @@
       <section class="section">
         <div class="wrap">
           <h2>Community</h2>
+          <h3>Hot Hathat Songs and Gongs</h3>
+          <img src="img/yoga-events.jpg" alt="yuga events images">
           <p>
-            Events and photos here...
+            Join Natalie, Haley, 90 Minutes of candlelit gentle Hatha Yoga, live music & the healing vibrations of crystal bowls played by sound healer Chase. Gentle Hatha is a blend between intentional movement and supported stretches fit for all body types. We’ll gently flow for the first half of class, ending with yin-like postures and a long relaxing savasana and massage. This workshop is suited for all levels. Pre-Registration required, as class size is limited.
           </p>
-          <p>
+          <h4>Date</h4>
+          <p>Sunday, March 18 to Sunday, March 18
+          </p>
+          <p>1:00 PM - 3:00 PM
+          </p>
             <a href="events.html" class="btn">
               View All Events
             </a>
