--- a/about.html
+++ b/about.html
@@ -69,9 +69,88 @@
       <section class="section section--alt">
         <div class="wrap">
           <h2>Our Team</h2>
-          <p>
-            Team details here...
-          </p>
+          <h3>Group Fitness Leaders</h3>
+          <ul class="listings row">
+            <li class="listings__item col col--6md">
+              <ul class="listings row team" >
+                <li class="listings__item col col--6md">
+                <img src="img/hero-first-class-teacher.jpg" alt="image of first class teacher">
+                </li>
+                <li class="listings__item col col--6md">
+               <p>Sheiful Zakaria</p>
+               <p>Credentials</p>
+               <ul>
+                 <li>CFES-WT</li>
+                 <li>TRX, KEISER & SCHWINN</li>
+               </ul>
+               <p>Classes</p>
+               <ul>
+                 <li>Cardio/Strength Formats: Powerwave, The Works, Buff Body, 3D Glutes, 3D Core, Stick & Stones, Knockout</li>
+                 <li>Group Cycling</li>
+               </ul>
+                </li>
+              </ul>
+            </li>
+            <li class="listings__item col col--6md">
+                  <ul class="listings row team" >
+                    <li class="listings__item col col--6md">
+                     <img src="img/hero-second-class-teacher.jpg" alt="image of second class teacher">
+                    </li>
+                    <li class="listings__item col col--6md">
+                    <p>Michelle Barrett</p>
+                    <p>Credentials</p>
+                    <ul>
+                      <li>BA Human Kinetics (UBC)</li>
+                      <li>BCRPA-SFL</li>
+                    </ul>
+                    <p>Classes</p>
+                    <ul>
+                      <li>Cardio/Strength: The Works, Yuga, Body Glide, 3D Core, 3D Glutes, Pump + Jump</li>
+                      <li>Dance formats: Pound</li>
+                    </ul>
+                    </li>
+                  </ul>
+            </li>
+          </ul>
+          <h3>Personal Trainers</h3>
+          <ul class="listings row">
+            <li class="listings__item col col--6md">
+              <ul class="listings row team" >
+                <li class="listings__item col col--6md">
+                <img src="img/hero-first-personal-trainer.jpg" alt="image of first personal trainer">
+                </li>
+                <li class="listings__item col col--6md">
+               <p> Jamie Carretas</p>
+               <ul>
+                 <li>CanFitPro Certified Personal Trainer</li>
+                 <li>TRX Certified Trainer</li>
+                 <li>Sandbell Training</li>
+                 <li>CPR & AED Certified</li>
+                 <li>dotFIT Certification</li>
+               </ul>
+
+                </li>
+              </ul>
+            </li>
+            <li class="listings__item col col--6md">
+                  <ul class="listings row team">
+                    <li class="listings__item col col--6md ">
+                     <img src="img/hero-second-personal-trainer.jpg" alt="image of second personal trainer">
+                    </li>
+                    <li class="listings__item col col--6md">
+                    <p> Josh Jackman</p>
+                    <ul>
+                      <li>NASM Certified Personal Trainer</li>
+                      <li>Sports Performance Diploma – Camosun College</li>
+                      <li>Agatsu kettlebell certification</li>
+                      <li>TRX Rip Trainer</li>
+                      <li>CPR & AED Certified</li>
+                      <li>TRX Suspension Trainer</li>
+                    </ul>
+                    </li>
+                  </ul>
+            </li>
+          </ul>
         </div>
       </section>
     </div>
